// Copyright 2022 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.notification.sender;
option go_package = "github.com/bucketeer-io/bucketeer/proto/notification/sender";

import "proto/notification/sender/notification.proto";
import "proto/notification/subscription.proto";

message NotificationEvent {
  string id = 1;
  string environment_namespace = 2;
  bucketeer.notification.Subscription.SourceType source_type = 3;
  Notification notification = 4;
  bool is_admin_event = 5;
}